# plotters-wasm-demo

./: .gitignore  Cargo.toml  README.md  start-server.bat  start-server.sh
.github/workflows/: rust.yml
src/: func_plot.rs  lib.rs
www/: index.html  index.js  package.json  vite.config.mjs
